# vara-eth-tests

./: .env.example  .gitignore  .testnet-cost-before.json  AGENTS.md  Cargo.toml  README.md  TESTING_WORKFLOW_REPORT.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mts
.github/workflows/: daily-testnet-ts.yml  daily-testnet.yml  manual-vft-debug.yml  weekly-testnet-load.yml
artifacts/idl/: extended_vft.idl  manager.idl  mandelbrot_checker.idl
contracts/: README.md
contracts/manager/: README.md
contracts/manager/tests/: gtest.rs  node.rs
contracts/mandelbrot-checker/: Cargo.toml  build.rs
contracts/mandelbrot-checker/app/: Cargo.toml
contracts/mandelbrot-checker/client/src/: lib.rs
contracts/mandelbrot-checker/src/: lib.rs
contracts/mandelbrot-checker/tests/: gtest.rs
manager/: .binpath  Cargo.toml  build.rs
manager/app/: Cargo.toml
manager/app/src/: lib.rs
manager/client/: Cargo.toml  build.rs
manager/client/src/: lib.rs
manager/src/: lib.rs
manager/tests/: gtest.rs
manager/tests/utils/: mod.rs
mandelbrot-checker/: Cargo.toml  README.md
mandelbrot-checker/app/: Cargo.toml
mandelbrot-checker/app/src/: lib.rs
mandelbrot-checker/client/: Cargo.toml  build.rs
mandelbrot-checker/tests/: gtest.rs
rust-sdk-tests/: Cargo.toml  README.md
rust-sdk-tests/src/: config.rs  test_helpers.rs
rust-sdk-tests/tests/: manager_mandelbrot.rs  mandelbrot_checker.rs  testnet_smoke.rs  vft_program.rs
script/: .env  analyze-testnet-ts-run.mjs  digit_recognition.idl  format-telegram-test-report.mjs  injected.ts  measure-testnet-costs.mjs  package.json  payloads.txt  run-testnet-daily-ts.sh  run-testnet-daily.sh  run-testnet-vft-debug-ts.sh  run-testnet-weekly-load-ts.sh  run-tests.sh  tsconfig.json  upload-code-ids.sh  use-local-env.sh  use-mainnet-env.sh  use-testnet-env.sh
script/src/: run-mandelbrot.ts
skills/local-vara-eth-node/: SKILL.md
skills/vara-eth-contract-tests/: SKILL.md
skills/vara-eth-contract-tests/references/: code-id-and-env-rules.md  common-test-checklist.md  debug-playbook.md  environment-matrix.md  query-vs-message.md  reply-testing.md  vara-eth-api-patterns.md  vft-patterns.md
test/: balance.test.ts  common.ts  config.ts  setup.test.ts  vitest.setup.ts
test/helpers/: replies.ts
test/mandelbrot/: checkers.test.ts  manager.test.ts
test/mandelbrot-checker/: checkers.test.ts
test/vara-eth-load/: mandelbrot-checker-load.test.ts
test/vft/: vft.load.test.ts  vft.test.ts
vft/: Cargo.toml
vft-service/: Cargo.toml
vft-service/src/: funcs.rs  lib.rs
vft/app/: Cargo.toml
vft/app/src/: lib.rs
vft/app/src/services/extended_vft/: funcs.rs  mod.rs
vft/tests/: node_test.rs  test.rs
vft/tests/utils_gclient/: mod.rs
