[workspace]
resolver = "2"
members = ["manager", "mandelbrot-checker", "rust-sdk-tests", "vft", "vft-service"]

[workspace.package]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
gstd = "=1.10.0"
gclient = "=1.10.0"
sails-rs = "=0.10.2"
sails-idl-gen = "=0.10.2"
sails-client-gen = "=0.10.2"
log = "*"
env_logger = "*"
tokio = { version = "1.41", features = ["rt", "macros"] }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }

[patch.crates-io]
alloy = { version = "1.8", git = "https://github.com/gear-tech/alloy.git", branch = "better-gas-estimation" }
