[workspace]
resolver = "2"
members = ["manager", "mandelbrot-checker", "rust-sdk-tests", "vft", "vft-service"]

[workspace.package]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
gstd = "=1.10.0"
gclient = "=1.10.0"
sails-rs = "=0.10.2"
sails-idl-gen = "=0.10.2"
sails-client-gen = "=0.10.2"
log = "*"
env_logger = "*"
tokio = { version = "1.41", features = ["rt", "macros"] }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }

[patch.crates-io]
alloy = { version = "1.8", git = "https://github.com/gear-tech/alloy.git", branch = "better-gas-estimation" }
gear-core = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-core-backend = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-core-errors = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-lazy-pages = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-lazy-pages-common = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-runtime-interface = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-sandbox = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-sandbox-env = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-sandbox-host = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-sandbox-interface = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gear-wasm-instrument = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gcore = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gprimitives = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gsys = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
gstd = { git = "https://github.com/gear-tech/gear", rev = "de3032de" }
