
[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
manager-app = { path = "app" }

[build-dependencies]
manager-app = { path = "app" }
sails-rs = { version = "=0.9.2", features = ["wasm-builder", "ethexe", "debug"] }
sails-idl-gen = "=0.9.2"

[dev-dependencies]
manager = { path = ".", features = ["wasm-binary"] }
manager-client = { path = "client" }
sails-rs = { version = "=0.9.2", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
mandelbrot-checker = { path = "../mandelbrot-checker", features = ["wasm-binary"] }
mandelbrot-checker-client = { path = "../mandelbrot-checker/client" }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
gclient = "=1.9.2"
gear-core = "=1.9.2"

[features]
wasm-binary = []
