[package]
name = "mandelbrot-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
mandelbrot-checker-app = { path = "app" }

[build-dependencies]
mandelbrot-checker-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder","ethexe"] }
sails-idl-gen.workspace = true

[dev-dependencies]
mandelbrot-checker = { path = ".", features = ["wasm-binary"] }
mandelbrot-checker-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
