[package]
name = "rust-sdk-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy = "1.8"
anyhow = "1"
ethexe-common = { git = "https://github.com/gear-tech/gear", rev = "de3032de", package = "ethexe-common" }
ethexe-ethereum = { git = "https://github.com/gear-tech/gear", rev = "de3032de", package = "ethexe-ethereum" }
ethexe-sdk = { git = "https://github.com/gear-tech/gear", rev = "de3032de", package = "ethexe-sdk" }
futures-util = "0.3"
gear-core = { git = "https://github.com/gear-tech/gear", rev = "de3032de", package = "gear-core" }
gprimitives = { git = "https://github.com/gear-tech/gear", rev = "de3032de", package = "gprimitives", features = ["std", "ethexe", "codec"] }
gsigner = { git = "https://github.com/gear-tech/gear", rev = "de3032de", package = "gsigner" }
mandelbrot-checker-app = { path = "../mandelbrot-checker/app" }
manager-app = { path = "../manager/app" }
parity-scale-codec = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
