[package]
name = "manager-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-rs = { version = "=0.9.2", features = ["debug", "ethexe"] }
rust_decimal = { version = "1.36.0", default-features = false }
rust_decimal_macros = "1.36.0"
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.11", default-features = false }

[features]
integration_test = []