[package]
name = "mandelbrot-checker-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-rs = { workspace = true, features = ["debug", "ethexe"] }
rust_decimal = { version = "1.36.0", default-features = false }
rust_decimal_macros = "1.36.0"
parity-scale-codec.workspace = true
scale-info.workspace = true
